# Tidy-Dia

./: .gitignore  LICENSE  README.md  grouped  pyproject.toml  result.detail
.claude/: settings.json
docs/superpowers/plans/: 2026-04-28-dia-organizer.md
docs/superpowers/specs/: 2026-04-28-dia-organizer-design.md
extension/tidy-dia-bridge/: background.js  manifest.json  popup.html
src/dia_organizer/: applescript.py  archive.py  classifier.py  cli.py  clusters.py  config.py  context_js.py  db.py  locking.py  notifications.py  paths.py  profiles.py  scanner.py  scheduling.py  server.py  snapshots.py  triage.py
src/dia_organizer/static/: app.js  style.css
src/dia_organizer/templates/: archive.html  base.html  history.html  triage.html
tests/: conftest.py  test_applescript.py  test_archive.py  test_classifier.py  test_cli.py  test_clusters.py  test_config.py  test_context_js.py  test_db.py  test_locking.py  test_notifications.py  test_paths.py  test_profiles.py  test_scanner.py  test_scheduling.py  test_server.py  test_smoke.py  test_snapshots.py  test_triage.py
tests/fixtures/: local_state.json  storable_profile_containers.json
